# LearnABLE

./: .envrc  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: .envrc  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  start.sh  urls.py
backend/adapted_output/: james_dutton_Photosyntehsis.pptx  james_dutton_Photosynthesis.pptx  noah_brown_Photosynthesis.pptx  olivia_johnson_Photosynthesis.pptx  student_2.pptx  student_3.pptx  student_5.pptx
backend/assessments/: admin.py  models.py  signals.py  urls.py  views.py
backend/assessments/migrations/: 0001_initial.py
backend/attendancesessions/: __init__.py  admin.py  apps.py  models.py  signals.py
backend/attendancesessions/migrations/: 0001_initial.py
backend/backend/: asgi.py  middleware.py  settings.py  urls.py  views.py
backend/backend/tests/: test_middleware.py
backend/classes/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/classes/migrations/: 0001_initial.py  0002_classes_students.py  0003_alter_classes_subject.py
backend/classstudents/: admin.py  apps.py  models.py
backend/classstudents/migrations/: 0001_initial.py
backend/learnable/: asgi.py  urls.py  wsgi.py
backend/learningmaterial/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/learningmaterial/migrations/: 0001_initial.py  0002_alter_learningmaterials_content.py
backend/learningmaterial/services/: ai_interaction.py  file_creators.py  file_extractors.py  lesson_adapter.py
backend/nccdreports/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/nccdreports/migrations/: 0001_initial.py  0002_lessoneffectivenessrecord_feedback_questionnaire.py  0002_nccdreport_additional_comments_and_more.py  0002_nccdreport_additional_comments_nccdreport_under_dda.py  0002_remove_nccdreport_has_diagonsed_disability_and_more.py  0003_nccdreport_has_evidence_alter_nccdreport_evidence.py
backend/studentattendance/: admin.py  models.py  urls.py
backend/studentattendance/migrations/: 0001_initial.py
backend/studentgrades/: apps.py  models.py
backend/students/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/subjects/: admin.py  models.py
backend/teachers/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/unitplan/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/utils/: encryption.py
frontend/: README.md  index.html  (+2 more)
(+186 files in other folders)
