[tool.poetry]
name = "LearnABLE"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.7.2"
certifi = "2022.12.7"
cffi = "1.16.0"
charset-normalizer = "3.0.1"
crispy-bootstrap5 = "2023.10"
cryptography = "39.0.1"
defusedxml = "0.7.1"
django-crispy-forms = "2.1"
django-debug-toolbar = "4.2.0"
idna = "3.4"
oauthlib = "3.2.2"
packaging = "^23.2"
psycopg = "3.1.18"
psycopg-binary = "3.1.18"
pycparser = "2.21"
pyjwt = "2.6.0"
python3-openid = "3.2.0"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
sqlparse = "0.4.3"
typing-extensions = "^4.11"
urllib3 = "1.26.14"
whitenoise = "6.6.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
pytest = "^8.3.1"
pytest-django = "^4.8.0"
faker = "^26.0.0"
factory-boy = "^3.3.0"
django-polymorphic = "^3.1.0"
setuptools = "^72.2.0"
boto3 = "^1.34.162"
python-dotenv = "^1.0.1"
croniter = "^3.0.3"
django-object-actions = "^4.2.0"
django-post-office = "^3.9.0"
jinja2 = "^3.1.4"
django-extensions = "^3.2.3"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
django-annoying = "^0.10.7"
freezegun = "^1.5.1"
django-q2 = "^1.7.2"
redis = "^5.0.8"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
httpie = "^3.2.3"
drf-nested-routers = "^0.94.1"
djangorestframework-datatables = "^0.7.2"
django-filter = "^24.3"
playwright = "^1.48.0"
pytest-playwright = "^0.5.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
debugpy = "^1.8.7"
blessed = "^1.20.0"
django-ses = "^4.2.0"
openapi-python-client = "^0.21.7"
django-dbbackup = "^4.2.1"
django-import-export = "^4.3.4"
django-allauth = "^65.4.0"
pytest-mock = "^3.14.0"
plotly = "^6.0.0"
weasyprint = "^64.1"
openai = "^1.72.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.5.0"
dotenv = "^0.9.9"
django = "5.0.3"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
langchain-core = "^0.3.56"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no -rw" # show print statements
DJANGO_SETTINGS_MODULE = "rmproject.settings"
python_files = ["*test*.py","tests/*.py"]

# ignore polymorphic pkg_resources warning
filterwarnings = ["ignore:.*:DeprecationWarning"]
